--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/wmadruga/soundimage#readme",
   "dependencies": {
     "angular": "^1.4.8",
-    "angular-spotify": "^1.2.1"
+    "angular-spotify": "^1.2.1",
+    "songza": "^1.1.3"
   }
 }
