--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/wmadruga/soundimage.git"
   },
   "author": "William Madruga, Daniel Duarte",
-  "license": "???",
+  "license": "TBD",
   "bugs": {
     "url": "https://github.com/wmadruga/soundimage/issues"
   },
